# Portfolio

./: .drone.yml  .envrc  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  Dockerfile  LICENSE  README.md  astro.config.mjs  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vs-settings.md
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
assets/: main.css
nix/: default.nix  devshell.nix
public/: create-windmill.jpg:Zone.Identifier  create-windmill.png:Zone.Identifier
src/: config.ts  env.d.ts  handlers.rs  main.rs  router.rs  templates.rs
src/components/: BaseHead.astro  Discord.svelte  Footer.astro  Header.astro
src/layouts/: BlogPost.astro  Main.astro  Resume.astro
src/pages/: about.md  blog.astro  discord.astro  index.astro  keys.astro  resume.md  rss.xml.js
src/pages/blog/: createmod.md  whyastro.md  whyrust.md
src/pages/blog/neoforge_tut_120/: setting_up_env.md
src/styles/: global.css
templates/: base.html  blog.html  index.html  post.html  projects.html
